Added more details such as description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Unity WebGL Player | Kosmos</title>
+    <title>Kosmos - FIU Engineering Project - 2020</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
     <script src="TemplateData/UnityProgress.js"></script>
@@ -13,6 +13,8 @@
     </script>
   </head>
   <body>
+    This is my FIU Engineering Orientation project created by Group 12 (Raul Faife, Nicholas Gautier, Alejandro Ron-Pedrique)
+
     <div class="webgl-content">
       <div id="unityContainer" style="width: 960px; height: 600px"></div>
       <div class="footer">
@@ -21,5 +23,7 @@
         <div class="title">Kosmos</div>
       </div>
     </div>
+
+
   </body>
 </html>
