--- a/index copy.html
+++ b/index copy.html
@@ -70,7 +70,7 @@
         <hr>
 
         <!-- Date/Time -->
-        <p>Posted on January 1, 2019 at 12:00 PM</p>
+        <p>Posted on May 2020</p>
 
         <hr>
 
